@@ -66,6 +66,10 @@ PrefInterface::PrefInterface(QWidget * parent, Qt::WindowFlags f)
 	connect(single_instance_check, SIGNAL(toggled(bool)), 
             this, SLOT(changeInstanceImages()));
 
+#ifdef Q_OS_WIN
+	floating_bypass_wm_check->hide();
+#endif
+
 	retranslateStrings();
 }
 
@@ -150,6 +154,9 @@ void PrefInterface::retranslateStrings() {
 	gui_combo->addItem( tr("Mini GUI"), "MiniGUI");
 	gui_combo->setCurrentIndex(gui_index);
 
+	floating_width_label->setNum(floating_width_slider->value());
+	floating_margin_label->setNum(floating_margin_slider->value());
+
 	createHelp();
 }
 
@@ -178,6 +185,14 @@ void PrefInterface::setData(Preferences * pref) {
 #endif
 
 	setGUI(pref->gui);
+
+	setFloatingAnimated(pref->floating_control_animated);
+	setFloatingWidth(pref->floating_control_width);
+	setFloatingMargin(pref->floating_control_margin);
+	setDisplayFloatingInCompactMode(pref->floating_display_in_compact_mode);
+#ifndef Q_OS_WIN
+	setFloatingBypassWindowManager(pref->bypass_window_manager);
+#endif
 }
 
 void PrefInterface::getData(Preferences * pref) {
@@ -235,6 +250,14 @@ void PrefInterface::getData(Preferences * pref) {
 #endif
 
 	pref->gui = GUI();
+
+	pref->floating_control_animated = floatingAnimated();
+	pref->floating_control_width = floatingWidth();
+	pref->floating_control_margin = floatingMargin();
+	pref->floating_display_in_compact_mode = displayFloatingInCompactMode();
+#ifndef Q_OS_WIN
+	pref->bypass_window_manager = floatingBypassWindowManager();
+#endif
 }
 
 void PrefInterface::setLanguage(QString lang) {
@@ -419,6 +442,49 @@ void PrefInterface::changeInstanceImages() {
 		instances_icon->setPixmap( Images::icon("instance2") );
 }
 
+// Floating tab
+void PrefInterface::setFloatingAnimated(bool b) {
+	floating_animated_check->setChecked(b);
+}
+
+bool PrefInterface::floatingAnimated() {
+	return floating_animated_check->isChecked();
+}
+
+void PrefInterface::setFloatingWidth(int percentage) {
+	floating_width_slider->setValue(percentage);
+}
+
+int PrefInterface::floatingWidth() {
+	return floating_width_slider->value();
+}
+
+void PrefInterface::setFloatingMargin(int pixels) {
+	floating_margin_slider->setValue(pixels);
+}
+
+int PrefInterface::floatingMargin() {
+	return floating_margin_slider->value();
+}
+
+void PrefInterface::setDisplayFloatingInCompactMode(bool b) {
+	floating_compact_check->setChecked(b);
+}
+
+bool PrefInterface::displayFloatingInCompactMode() {
+	return floating_compact_check->isChecked();
+}
+
+#ifndef Q_OS_WIN
+void PrefInterface::setFloatingBypassWindowManager(bool b) {
+	floating_bypass_wm_check->setChecked(b);
+}
+
+bool PrefInterface::floatingBypassWindowManager() {
+	return floating_bypass_wm_check->isChecked();
+}
+#endif
+
 void PrefInterface::createHelp() {
 	clearHelp();
 
@@ -498,6 +564,33 @@ void PrefInterface::createHelp() {
            "used by another application.") );
 
 	manual_port_button->setWhatsThis( server_port_spin->whatsThis() );
+
+	addSectionTitle(tr("Floating control"));
+
+	setWhatsThis(floating_animated_check, tr("Animated"),
+		tr("If this option is enabled, the floating control will appear "
+           "with an animation.") );
+
+	setWhatsThis(floating_width_slider, tr("Width"),
+		tr("Specifies the width of the control (as a percentage).") );
+
+	setWhatsThis(floating_margin_slider, tr("Margin"),
+		tr("This option sets the number of pixels that the floating control "
+           "will be away from the bottom of the screen. Useful when the "
+           "screen is a TV, as the overscan might prevent the control to be "
+           "visible.") );
+
+	setWhatsThis(floating_compact_check, tr("Display in compact mode too"),
+		tr("If this option is enabled, the floating control will appear "
+           "in compact mode too. Warning: the floating control has not been "
+           "designed for compact mode and it might not work properly.") );
+
+#ifndef Q_OS_WIN
+	setWhatsThis(floating_bypass_wm_check, tr("Bypass window manager"),
+		tr("If this option is checked, the control is displayed bypassing the "
+           "window manager. Disable this option if the floating control "
+           "doesn't work well with your window manager.") );
+#endif
 }
 
 #include "moc_prefinterface.cpp"
